--- a/src/assets/styles/cmps/TaskList.scss
+++ b/src/assets/styles/cmps/TaskList.scss
@@ -1,17 +1,18 @@
 .task-list {
   display: flex;
   flex-direction: column;
-  // width: rem(264px);
   height: 100%;
   row-gap: rem(8px);
-  padding: rem(4px);
-  margin: 0 rem(4px);
   list-style: none;
 
-  overflow: auto;
-  scrollbar-color: var(--ds-background-neutral-hovered, #091e4224) var(--ds-background-neutral, #091e420f);
-  scrollbar-width: thin;
-  scroll-behavior: smooth;
+  // width: rem(264px);
+  // padding: rem(4px);
+  // margin: 0 rem(4px);
+  
+  // overflow: auto;
+  // scrollbar-color: var(--ds-background-neutral-hovered, #091e4224) var(--ds-background-neutral, #091e420f);
+  // scrollbar-width: thin;
+  // scroll-behavior: smooth;
   // flex: 1;
   
 }
